clarify why xi_0 disappears in 4.1.15

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -36,7 +36,7 @@ which mediate the difference between \(E_* BU\) and \(E_* BU[6, \infty)\) by mea
 
 \section{Unstable contexts and the Steenrod algebra}\label{UnstableContextsSection}
 
-In this Lecture, our goal is to codify the study of unstable cooperations, beginning with an unstructured account of how they arise.  Recall that for a ring map \(f\co R \to S\), in \Cref{StableContextLecture} we studied the problem of recovering an \(R\)--module from an \(S\)--module plus extra data.  The intermediate category of extra data that we settled on was that of \index{descent!data}\textit{descent data}, which we phrased most enduringly as a certain cosimplicial diagram.  Stripping away the commutative algebra, the only categorical formality that went into this was the adjunction
+In this Lecture, our goal is to codify the study of unstable cooperations, beginning with an unstructured account of how they arise.  Recall that for a ring map \(f\co R \to S\), in \Cref{StableContextLecture} we studied the problem of recovering an \(R\)--module from an \(S\)--module equipped with extra data.  The meaning of ``extra data'' that we settled on was that of \index{descent!data}\textit{descent data}, which we phrased most enduringly as a certain cosimplicial diagram.  Stripping away the commutative algebra, the only categorical formality that went into this was the adjunction
 \begin{center}
 \begin{tikzcd}
 & & \CatOf{Modules}_R \arrow[shift left=0.4em]{r}{- \otimes_R S} & \CatOf{Modules}_S \arrow[shift left=0.4em, "\mathrm{forget}"]{l} ,
@@ -52,8 +52,9 @@ We will write \(E(-)\) for the induced monad on \(\CatOf{Spaces}\), given by the
 \mu\co E(E(X)) & = \Loops^\infty(E \sm \Susp^\infty\Loops^\infty(E \sm \Susp^\infty X)) \\
 & \to \Loops^\infty(E \sm E \sm \Susp^\infty X) \to \Loops^\infty(E \sm \Susp^\infty X) = E(X).
 \end{align*}
-Just as in the stable situation, we can extract from this a cosimplicial space:
-\begin{definition}
+Just as in the stable situation, we can extract from this a cosimplicial object:
+
+\begin{definition}\label{UASSDefinition}
 The \index{descent!object!unstable}\textit{unstable descent object} is the cosimplicial space
 \[\sheaf{UD}_E(X) := \left\{
 \begin{tikzcd}
@@ -63,18 +64,18 @@ The \index{descent!object!unstable}\textit{unstable descent object} is the cosim
 \cdots
 \end{tikzcd}
 \right\}.\]
-Its totalization gives the \index{completion!unstable}\textit{unstable \(E\)--nilpotent completion of \(X\)}, and the associated filtration spectral sequence on homotopy is the \index{Adams spectral sequence!unstable}\textit{unstable Adams spectral sequence}.\footnote{The curious reader can find unstable analogues of \Cref{HF2ASSFigure} in \cite{BPS}.}  The simplicial scheme \[\Ucontext{E} = \Spec \pi_0 \sheaf{UD}_E(S^0)\] forms the \index{context!unstable}\textit{unstable context} for \(E\), and a space \(X\) gives rise to a quasicoherent sheaf over \(\Ucontext{E}\) by: \[\Ucontext{E}(X) = (\pi_0 \sheaf{UD}_E(X))\widetilde{\quad}.\]
+Its totalization gives the \index{completion!unstable}\textit{unstable \(E\)--nilpotent completion of \(X\)}, and the associated filtration spectral sequence on homotopy is the \index{Adams spectral sequence!unstable}\textit{unstable Adams spectral sequence}.\footnote{A reader seeking visual stimulation can find unstable analogues of \Cref{HF2ASSFigure} in \cite{BPS}.}  The simplicial scheme \[\Ucontext{E} = \Spec \pi_0 \sheaf{UD}_E(S^0)\] forms the \index{context!unstable}\textit{unstable context} for \(E\), and a space \(X\) gives rise to a quasicoherent sheaf over \(\Ucontext{E}\) by: \[\Ucontext{E}(X) = (\pi_0 \sheaf{UD}_E(X))\widetilde{\quad}.\]
 \end{definition}
 
-The remainder of this section will be spent trying to understand the spectral sequence associated to the coskeletal filtration of such an unstable descent object.  In the stable situation, we recognized that in favorable situations the homotopy groups of the descent object formed a cosimplicial module over a certain cosimplicial ring---or, equivalently, a \emph{Cartesian} sheaf over a certain simplicial scheme.  Furthermore, we found that the simplicial scheme itself had some arithmetic meaning, and that the \(E_2\)--page of the descent spectral sequence computed the cohomology of this sheaf.  We will find analogues of all of these results in the unstable setting, listed above in order from least to most difficult.
+The remainder of this Lecture will be spent trying to wrangle the information in \Cref{UASSDefinition}.  In the stable situation, we recognized that in favorable situations the homotopy groups of the descent object formed a cosimplicial module over a certain cosimplicial ring---or, equivalently, a \emph{Cartesian} sheaf over a certain simplicial scheme.  Furthermore, we found that the simplicial scheme itself had some arithmetic meaning, and that the \(E_2\)--page of the descent spectral sequence computed the cohomology of this sheaf.  We will find analogues of all of these results in the unstable setting, listed above in order from least to most difficult.
 
-We would like to recognize the cosimplicial abelian group \(\pi_0 \sheaf{UD}_E(X)\) as a sort of comodule.  In the stable case, this came from the smash product map \(\S^0 \sm X \to X\), as well as the lax monoidality of the functor \(\sheaf{D}_E(-)\).  However, to get a \index{Segal condition}Segal condition by which we could identify the higher-dimensional objects in \(\pi_0 \sheaf D_E(X)\), we had to introduce the condition \index{flatness hypothesis@flatness hypothesis, \FH}{\FH}.\footnote{In particular, {\FH} caused the marked map in \(E_0 X \xrightarrow{\eta_R} E_0(E \sm X) \xleftarrow{\star} E_0 E \otimes_{E_0} E_0 X\) to become invertible.}  The unstable situation has an analogous antecedent:
+We would first like to recognize the cosimplicial abelian group \(\pi_0 \sheaf{UD}_E(X)\) as a sort of comodule.  In the stable case, this came from the smash product map \(\S^0 \sm X \to X\), as well as the lax monoidality of the functor \(\sheaf{D}_E(-)\).  However, to get a \index{Segal condition}Segal condition by which we could identify the higher-dimensional objects in \(\pi_0 \sheaf D_E(X)\), we had to introduce the condition \index{flatness hypothesis@flatness hypothesis, \FH}{\FH}.\footnote{In particular, {\FH} caused the marked map in \(E_0 X \xrightarrow{\eta_R} E_0(E \sm X) \xleftarrow{\star} E_0 E \otimes_{E_0} E_0 X\) to become invertible.}  The unstable situation has an analogous antecedent:
 
 \begin{definition}[{\cite[Assumption 6.5]{BCM}}]
 A ring spectrum \(E\) is said to satisfy the \index{flatness hypothesis@flatness hypothesis, \FH!unstable@unstable, \UFH}\textbf{U}nstable \textbf{F}reeness \textbf{H}ypothesis, or \UFH, if \(E_* \OS{E}{k}\) is a free and even \(E_*\)--module for every value of \(k\).\footnote{This helps us understand the following analogous zigzag: \[\pi_0 E(X) \xrightarrow{\eta_R} \pi_0 E(E(X)) \xleftarrow{\mu \circ 1} \pi_0 E(E(E(X))) \xleftarrow{\mathrm{compose}} \pi_m E(E(S^0)) \times \pi_0 E(X).\]}
 \end{definition}
 
-Under this condition, we again turn to studying the structure of \(\sheaf{UD}_E(S^0)\).  If we had a Segal condition, we would expect the structure present to be determined by \(\pi_0 \sheaf{UD}_E(S^0)[j]\) for \(j \le 2\).  The data at \(j = 0\) is largely redundant: \[\pi_0 E(S^0) = \pi_0 \OS{E}{0} = E_0\] computes the coefficient ring of \(E\).  The data at \(j = 1\) consists of the homology groups of the the infinite loopspace associated to \(E\): \[\pi_0 E(E(S^0)) = E_0 \OS{E}{0}.\]  There are three pieces of structure present here: the augmentation map \[E_0 \OS{E}{0} \to E_0(E) \to E_0\] and the left- and right-unit maps \(E_0 \to E_0 \OS{E}{0}\).  The assumption {\UFH} gives us a foothold on the case \(j = 2\): a choice of basis for \(E_0 \OS{E}{0}\) gives an unstable isomorphism \(E(E(S^0)) \simeq \prod_\ell \OS{E}{0}\), so that \(\pi_0 \sheaf{UD}_E(S^0)[2]\) splits as a tensor product of terms of the form \(E_0 \OS{E}{0}\).  Here, we find a lot of structure: the addition of cohomology classes is represented by a map \[\OS E 0 \times \OS E 0 \to \OS E 0,\] which on \(E\)--homology induces a map \[\ast\co E_0 \OS{E}{0} \otimes_{E_0} E_0 \OS{E}{0} \to E_0 \OS{E}{0};\] the multiplication of cohomology classes similarly induces a map \[\circ\co E_0 \OS{E}{0} \otimes E_0 \OS{E}{0} \to E_0 \OS{E}{0};\] these are compatible with the images of unit classes \(0, 1 \in \pi_0 E\) under the left- and right-units specified above; there is an additive inverse map \[\chi\co E_0 \OS{E}{0} \to E_0 \OS{E}{0}\] compatible with the \(\ast\)--product and giving a skew-commutativity formula \[a \circ b = \chi(b \circ a);\] there is a diagonal map \[\Delta\co E_0 \OS{E}{0} \to E_0 \OS{E}{0} \otimes_{E_0} E_0 \OS{E}{0}\] induced by the diagonal map of the space $\OS{E}{0}$; each \(E_0 \OS{E}{0}\) becomes a Hopf algebra using \(\chi\), \(\ast\), and \(\Delta\); and there is a distributivity condition pictured in \Cref{DistributivityDiagram} intertwining \(\ast\), \(\circ\), and \(\Delta\).\footnote{Analogous structure also appears for aperiodic ring spectra \(E\) satisfying a graded version of {\UFH}, and in that case tracking through the extra grading indices is actually helpful for deciphering what these maps ``feel'' like.}
+Under this condition, we again turn to studying the structure of \(\sheaf{UD}_E(S^0)\).  If we had a Segal condition, we would expect the structure present to be determined by \(\pi_0 \sheaf{UD}_E(S^0)[j]\) for \(j \le 2\).  The data at \(j = 0\) is largely redundant: \[\pi_0 E(S^0) = \pi_0 \OS{E}{0} = E_0\] computes the coefficient ring of \(E\).  The data at \(j = 1\) consists of the homology groups of the the infinite loopspace associated to \(E\): \[\pi_0 E(E(S^0)) = E_0 \OS{E}{0}.\]  There are three pieces of structure present here: the augmentation map \[E_0 \OS{E}{0} \to E_0(E) \to E_0\] and the left- and right-unit maps \(E_0 \to E_0 \OS{E}{0}\).  The assumption {\UFH} gives us a foothold on the case \(j = 2\): a choice of basis for \(E_0 \OS{E}{0}\) gives an unstable isomorphism \(E(E(S^0)) \simeq \prod_\ell \OS{E}{0}\), so that \(\pi_0 \sheaf{UD}_E(S^0)[2]\) splits as a tensor product of terms of the form \(E_0 \OS{E}{0}\).  Here, we find a lot of structure: the addition of cohomology classes is represented by a map \[\OS E 0 \times \OS E 0 \to \OS E 0,\] which on \(E\)--homology induces a map \[\ast\co E_0 \OS{E}{0} \otimes_{E_0} E_0 \OS{E}{0} \to E_0 \OS{E}{0};\] the multiplication of cohomology classes similarly induces a map \[\circ\co E_0 \OS{E}{0} \otimes E_0 \OS{E}{0} \to E_0 \OS{E}{0};\] these are compatible with the images of unit classes \(0, 1 \in \pi_0 E\) under the left- and right-units specified above; there is an additive inverse map \[\chi\co E_0 \OS{E}{0} \to E_0 \OS{E}{0}\] compatible with the \(\ast\)--product and giving a skew-commutativity formula \[a \circ b = \chi(b \circ a);\] there is a diagonal map \[\Delta\co E_0 \OS{E}{0} \to E_0 \OS{E}{0} \otimes_{E_0} E_0 \OS{E}{0}\] induced by the diagonal map of the space $\OS{E}{0}$; the maps \(\chi\), \(\ast\), and \(\Delta\) imbue \(E_0 \OS{E}{0}\) with a Hopf algebra structure; and there is a distributivity condition pictured in \Cref{DistributivityDiagram} intertwining \(\ast\), \(\circ\), and \(\Delta\).\footnote{Analogous structure also appears for aperiodic ring spectra \(E\) satisfying a graded version of {\UFH}, and in that case tracking through the extra grading indices is actually helpful for deciphering what these maps ``feel'' like.}
 
 \begin{figure}
 \begin{center}
@@ -93,20 +94,20 @@ A \otimes_R (A \otimes_R A) \arrow{r}{1 \otimes \ast} \arrow{d}{\Delta \otimes (
 A \idxentry{Hopf ring} is a module equipped with structure maps \(\eps\), \(\ast\), \(\circ\), \(\Delta\), and \(\chi\), as well as unit classes \([0]\) and \([1]\) for \(\ast\) and \(\circ\) respectively, subject to the axioms described above.\footnote{Equivalently, a Hopf ring is a ring object in the category of coalgebras.  This has the virtue of concision, but taking comodules as the base category does not seem to align with our perspective in the coming Lecture.}\footnote{There are a few more pieces of topological structure that Boardman--Johnson--Wilson call an \index{Hopf ring!enriched}\textit{enriched Hopf ring}, which we omit from the algebraic definition because they do not affect the homological algebra of modules for a Hopf ring.  They are: an element \(v \in \pi_0 E\) selects a connected component of \(\OS{E}{0}\), and there is an attached element \([v] \in E_0 \OS{E}{0}\) (i.e., the right unit structure map); a cohomology operation \(r\co E^0(-) \to E^0(-)\) induces a map \(\OS{E}{0} \to \OS{E}{0}\) and hence a map on \(E\)--homology \(r_*\co E_0 \OS{E}{0} \to E_0 \OS{E}{0}\); and, in particular, this gives a homology suspension element \(e = (e_2)_*\), where \(e_2\co E^0(-) \to E^2(-) \cong E^0(\Loops^2 -)\) is the map witnessing the \(2\)--periodicity of \(E\).}
 \end{definition}
 
-These structures are enough to pin down the behavior of both \(E_0 X\) as the unstable descent object:
+These structures are enough to pin down the behavior of both \(E_0 X\) and the unstable descent object:
 
 \begin{definition}[{cf.\ \Cref{CofreeComoduleAdjunction}}]
-Let \(E\) satisfy {\UFH}.  The associated Hopf ring \(E_0 \OS{E}{0}\) gives rise to a comonad \(G(M) = M \otimes_{E_0} E_0 \OS{E}{0}\), and comodules for the Hopf ring are defined to be \(G\)--coalgebras.\index{comodule!coalgebra}
+Let \(E\) satisfy {\UFH}.  The associated Hopf ring \(E_0 \OS{E}{0}\) gives rise to a comonad \(G(M) = M \otimes_{E_0} E_0 \OS{E}{0}\), and \(G\)--coalgebras define comodules for the Hopf ring.\index{comodule!coalgebra}
 \end{definition}
 
 \begin{lemma}[{\cite[Theorem 6.17]{BCM}}]\label{HopfRingFromOneRingSpectrum}
-If an even-periodic ring spectrum \(E\) satisfies {\UFH} and \(X\) is a space with \(E_* X\) a free \(E_*\)--module, then \(E_0 X\) forms a \(G\)--coalgebra, the cosimplicial object \(\pi_0 \sheaf{UD}_E(X)\) is its cobar resolution under \(G\), and the \(E_2\)--page of the \index{Adams spectral sequence!unstable}unstable descent spectral sequence is thus presented as \[E_2^{s} = L^s\CatOf{Coalgebras}_G(E_0, E_0 X).\]
+If an even-periodic ring spectrum \(E\) satisfies {\UFH} and \(X\) is a space with \(E_* X\) a free \(E_*\)--module, then \(E_0 X\) forms a \(G\)--coalgebra, the cosimplicial object \(\pi_0 \sheaf{UD}_E(X)\) is its cobar resolution under \(G\), and the \(E_2\)--page of the \index{Adams spectral sequence!unstable}unstable descent spectral sequence is presented as \[E_2^{s} = L^s\CatOf{Coalgebras}_G(E_0, E_0 X).\]
 \end{lemma}
 \begin{proof}
 For \(X\) satisfying this freeness condition, there is a splitting \[E(X) \simeq \prod_\ell \OS{E}{n_\ell} \simeq \prod_\ell \OS{E}{0},\] where the second equivalence is by even-periodicity.  Since \(E\) satisfies {\UFH}, the K\"unneth spectral sequence for the comparison map \(\prod_\ell E(\OS{E}{0}) \to E(E(X))\) collapses to an equivalence, so that \[\pi_0 E(E(X)) \cong \pi_0 \left(\prod_\ell E(\OS{E}{0})\right) \cong E_0(\OS{E}{0}) \otimes_{E_0} E(X).\]  Continuing inductively in this way, the levelwise homotopy of the entire unstable descent object \(\sheaf{UD}_E(X)\) can be identified as the cobar complex for \(G\), and the structure maps of \(\pi_0 \sheaf{UD}_E(X)[\le 2]\) endow \(E_0 X\) itself with the structure of a \(G\)--coalgebra.
 \end{proof}
 
-At this point, it is instructive to work through an example to understand the kinds of objects we have constructed.  At first appraisal, these objects appear to be so bottomlessly complicated that it must be a hopeless enterprise to actually compute even just the enriched Hopf ring associated to a spectrum \(E\).  In fact, the abundance of structure maps involved gives enough footholds that this is actually often feasible, provided we have sufficiently strong stomachs.  Our example will be the aperiodic spectrum \(E = \HFtwo\), and the place to start is with a very old lemma:
+At this point, it is instructive to work through an extended example to understand the kinds of objects under consideration.  At first appraisal, they appear so bottomlessly complicated that it must be hopeless to actually compute even the enriched Hopf ring associated to a spectrum \(E\).  In fact, the abundance of structure maps involved gives enough footholds that this is actually often feasible, provided we have sufficiently strong stomachs.  Our example will be the aperiodic spectrum \(E = \HFtwo\), and the place to start is with a very old result:
 \begin{lemma}
 If \(E\) is a spectrum with \(\pi_{-1} E = 0\), then \(\OS{E}{1} \simeq B\OS{E}{0}\).  Consequentially, if \(E\) is a connective spectrum then \(\OS{E}{n} = B^n \OS{E}{0}\) for \(n \ge 0\). \qed
 \end{lemma}
@@ -134,7 +135,7 @@ d^r(x \circ y) = (d^r x) \circ y. \qedhere
 \end{lemma}
 \noindent This Lemma is incredibly useful: it means that differentials can be transported \emph{between spectral sequences} for classes which can be decomposed as \(\circ\)--products.  This means that the bottom spectral sequence (i.e., the case \(j = 0\)) exerts a large amount of control over the others---and this spectral sequence often turns out to be very computable.
 
-We now turn to concrete computations for \(E = \HFtwo\) and \(F = \HFtwo\).  To ground the induction, we will consider the first spectral sequence \[\Tor^{\HFtwo_*(\F_2)}_{*, *}(\F_2, \F_2) \Rightarrow \HFtwo_* B\F_2.\]  Using that \(\RP^\infty\) gives a model for \(B\F_2\), we use \Cref{HF2RPinftyExample} to analyze the target of this spectral sequence: as an \(\F_2\)--module, we have already demonstrated an isomorphism \[\HFtwo_* B\F_2 \cong \F_2\{\alpha_j \mid j \ge 0\}.\]  Using our further computation in \Cref{RPExampleFaulty}, we can also give a presentation of the Hopf algebra structure on \(\HFtwo_* B\F_2\): it is dual to the primitively-generated polynomial algebra on a single class, so forms a divided power algebra on a single class which we will denote by \(\alpha_{()}\).  In characteristic \(2\), this decomposes as \[\HFtwo_* B\F_2 \cong \Gamma[\alpha_{()}] \cong \bigotimes_{j=0}^\infty \F_2[\alpha_{(j)}] / \alpha_{(j)}^2,\] where we have written \(\alpha_{(j)}\) for \(\alpha_{()}^{[2^j]}\) in the divided power structure.
+We now turn to concrete computations for \(E = \HFtwo\) and \(F = \HFtwo\).  To ground the induction, we will consider the first spectral sequence \[\Tor^{\HFtwo_*(\F_2)}_{*, *}(\F_2, \F_2) \Rightarrow \HFtwo_* B\F_2.\]  Using \(\RP^\infty\) as a model for \(B\F_2\), we employ \Cref{HF2RPinftyExample} to analyze the target of this spectral sequence: as an \(\F_2\)--module, we have an isomorphism \[\HFtwo_* B\F_2 \cong \F_2\{\alpha_j \mid j \ge 0\}.\]  Using our further computation in \Cref{RPExampleFaulty}, we can also give a presentation of the Hopf algebra structure on \(\HFtwo_* B\F_2\): it is dual to the primitively-generated polynomial algebra on a single class, so forms a divided power algebra on a single class which we will denote by \(\alpha_{()}\).  In characteristic \(2\), this decomposes as \[\HFtwo_* B\F_2 \cong \Gamma[\alpha_{()}] \cong \bigotimes_{j=0}^\infty \F_2[\alpha_{(j)}] / \alpha_{(j)}^2,\] where we have written \(\alpha_{(j)}\) for \(\alpha_{()}^{[2^j]}\) in the divided power structure.
 
 \begin{corollary}
 This \(\Tor\) spectral sequence collapses at the \(E^2\)--page.
@@ -163,7 +164,7 @@ There is an isomorphism
 \end{corollary}
 
 \begin{remark}[{\cite[Theorems 8.5 and 8.11]{Wilson}}]
-The odd--primary analogue of this result appears in Wilson's book, where again the bar spectral sequences are collapsing.  The end result is \[\HFp_* \OS{\HFp}{*} \cong \frac{\bigotimes_{I, J} \F_p[e_1 \circ \alpha_I \circ \beta_J, \alpha_I \circ \beta_J]}{(e_1 \circ \alpha_I \circ \beta_J)^{\ast 2} = 0, (\alpha_I \circ \beta_J)^{\ast p} = 0, e_1 \circ e_1 = \beta_1},\] where we have defined the following elements:
+The odd--primary analogue of this result appears in Wilson's book, where again the bar spectral sequences all collapse.  The end result is \[\HFp_* \OS{\HFp}{*} \cong \frac{\bigotimes_{I, J} \F_p[e_1 \circ \alpha_I \circ \beta_J, \alpha_I \circ \beta_J]}{(e_1 \circ \alpha_I \circ \beta_J)^{\ast 2} = 0, (\alpha_I \circ \beta_J)^{\ast p} = 0, e_1 \circ e_1 = \beta_1},\] where we have defined the following elements:
 \begin{itemize}
 \item \(e_1 \in (\HFp)_1 \OS{\HFp}{1}\) is the \index{homology suspension}homology suspension element.
 \item \(\alpha_{(j)} \in (\HFp)_{2p^j} \OS{\HFp}{1}\) are the analogues of the elements considered above.
@@ -182,13 +183,12 @@ We now apply this philosophy to our example:
 \[\mathcal A_* = \F_2[\xi_0, \xi_1, \xi_2, \ldots]/(\xi_0 = 1).\]
 \end{corollary}
 \begin{proof}
-We approach via the system \[\HFtwo_* \HFtwo \cong \colim\left( \cdots \to \HFtwo_{*+j} \OS{\HFtwo}{j} \to \HFtwo_{*+(j+1)} \OS{\HFtwo}{j+1} \to \cdots \right).\]  Each suspension map factors through projection to \(\ast\)--indecomposables~\cite[Corollary 2.18]{BJW}, and hence we may replace this system with \[\HFtwo_* \HFtwo \cong \colim\left( \cdots \to Q^* \HFtwo_{*+j} \OS{\HFtwo}{j} \to Q^* \HFtwo_{*+(j+1)} \OS{\HFtwo}{j+1} \to \cdots \right).\]  \Cref{CalculationOfUnstableSteenrodHopfRing} gives us unabashed access to the \(\ast\)--indecomposables:
+We approach via the system \[\HFtwo_* \HFtwo \cong \colim\left( \cdots \to \HFtwo_{*+j} \OS{\HFtwo}{j} \to \HFtwo_{*+(j+1)} \OS{\HFtwo}{j+1} \to \cdots \right).\]  Each suspension map factors through projection to \(\ast\)--indecomposables~\cite[Corollary 2.18]{BJW}, and hence we may replace this system with \[\HFtwo_* \HFtwo \cong \colim\left( \cdots \to Q^* \HFtwo_{*+j} \OS{\HFtwo}{j} \to Q^* \HFtwo_{*+(j+1)} \OS{\HFtwo}{j+1} \to \cdots \right).\]  \Cref{CalculationOfUnstableSteenrodHopfRing} gives us unfettered access to the \(\ast\)--indecomposables:
 \begin{align*}
 Q^\ast \HFtwo_* \OS{\HFtwo}{*} & \cong \F_2\left\{\alpha_{I} \middle| \text{\(I\) a multi-index}\right\} \\
-& = \F_2\left\{ \alpha_{(I_0)} \circ \alpha_{(I_1)} \circ \cdots \circ \alpha_{(I_n)} \middle| \text{\(I = (I_0, \ldots, I_n)\) a multi-index}\right\}. \\
-& \cong \F_2[\xi_0, \xi_1, \xi_2, \ldots],
+& = \F_2\left\{ \alpha_{(I_0)} \circ \alpha_{(I_1)} \circ \cdots \circ \alpha_{(I_n)} \middle| \text{\(I = (I_0, \ldots, I_n)\) a multi-index}\right\}.
 \end{align*}
-where we have translated to our previous notation by writing \(\xi_j\) for \(a_{(j)}\) and juxtaposition for \(\circ\)--product.  Finally, the maps in this system correspond to iteratively taking the \(\circ\)--product with the homology suspension element \(\alpha_{(0)} = \xi_0\), which has the effect of inverting it.  The final assertion that suspension has no stable effect yields the claim.\footnote{As a reminder, the graded unstable element \(e \in H_1 S^1\) contributes to stable degree \(1 - 1 = 0\).}
+The \(j\){\th} component of this system consists of sums of monomials with \(j\) factors, and the maps in the system multiply by the homology suspension element \(\alpha_{(0)} = \xi_0\) to produce a monomial with \(j+1\) factors from one with \(j\) factors.\footnote{As a reminder, the graded unstable element \(e \in H_1 S^1\) contributes to stable degree \(1 - 1 = 0\).}  Writing \(\xi_j = \alpha_{(j)}\), this computes the colimit to be \[\HFtwo_* \HFtwo \cong \F_2[\xi_1, \xi_2, \ldots.]. \qedhere\]
 \end{proof}
 
 Our last goal in this Lecture is to sketch a foothold that this example has furnished us with for the algebro-geometric interpretation of unstable cooperations.  First, we should remark that it has been shown that there is no manifestation of the homology of a space as any kind of classical comodule~\cite[Theorem 9.4]{BJW}, so we are unable to directly pursue an analogue of \Cref{FHGivesComodules} presenting the homology of a space as a Cartesian quasicoherent sheaf over some object.  This no-go result is quite believable from the perspective of cohomology operations: we have calculated in the case of \(E = \HFtwo\) that a generic unstable cohomology operation takes the form \[x \mapsto \sum_{\text{\(S\) a set of multi-indices}} \left(c_S \cdot \prod_{I \in S} \Sq^I(x)\right).\]  This inherently uses the multiplicative structure on \(\HFtwo^*(X)\), and the proof of the result of Boardman, Johnson, and Wilson rests entirely on the observation that decomposable elements cannot be mapped to indecomposable elements by maps of algebras, but maps of modules have no such control.\footnote{It is probably still possible to treat this carefully enough to cast the whole of unstable operations (and, in particular, the comonad \(G\)) into algebro-geometric language.}
