more fixups to 4.1.15

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -188,7 +188,7 @@ We approach via the system \[\HFtwo_* \HFtwo \cong \colim\left( \cdots \to \HFtw
 Q^\ast \HFtwo_* \OS{\HFtwo}{*} & \cong \F_2\left\{\alpha_{I} \middle| \text{\(I\) a multi-index}\right\} \\
 & = \F_2\left\{ \alpha_{(I_0)} \circ \alpha_{(I_1)} \circ \cdots \circ \alpha_{(I_n)} \middle| \text{\(I = (I_0, \ldots, I_n)\) a multi-index}\right\}.
 \end{align*}
-The \(j\){\th} component of this system consists of sums of monomials with \(j\) factors, and the maps in the system multiply by the homology suspension element \(\alpha_{(0)} = \xi_0\) to produce a monomial with \(j+1\) factors from one with \(j\) factors.\footnote{As a reminder, the graded unstable element \(e \in H_1 S^1\) contributes to stable degree \(1 - 1 = 0\).}  Writing \(\xi_j = \alpha_{(j)}\), this computes the colimit to be \[\HFtwo_* \HFtwo \cong \F_2[\xi_1, \xi_2, \ldots.]. \qedhere\]
+The \(j\){\th} component of this system consists of sums of monomials with \(j\) factors, and the maps in the system multiply by the homology suspension element \(\alpha_{(0)} = \xi_0\) to produce a monomial with \((j+1)\) factors from one with \(j\) factors.\footnote{As a reminder, the graded unstable element \(e \in H_1 S^1\) contributes to stable degree \(1 - 1 = 0\).}  Writing \(\xi_k = \alpha_{(k)}\), this computes the colimit to be \[\HFtwo_* \HFtwo \cong \F_2[\xi_k \mid k \ge 1]. \qedhere\]
 \end{proof}
 
 Our last goal in this Lecture is to sketch a foothold that this example has furnished us with for the algebro-geometric interpretation of unstable cooperations.  First, we should remark that it has been shown that there is no manifestation of the homology of a space as any kind of classical comodule~\cite[Theorem 9.4]{BJW}, so we are unable to directly pursue an analogue of \Cref{FHGivesComodules} presenting the homology of a space as a Cartesian quasicoherent sheaf over some object.  This no-go result is quite believable from the perspective of cohomology operations: we have calculated in the case of \(E = \HFtwo\) that a generic unstable cohomology operation takes the form \[x \mapsto \sum_{\text{\(S\) a set of multi-indices}} \left(c_S \cdot \prod_{I \in S} \Sq^I(x)\right).\]  This inherently uses the multiplicative structure on \(\HFtwo^*(X)\), and the proof of the result of Boardman, Johnson, and Wilson rests entirely on the observation that decomposable elements cannot be mapped to indecomposable elements by maps of algebras, but maps of modules have no such control.\footnote{It is probably still possible to treat this carefully enough to cast the whole of unstable operations (and, in particular, the comonad \(G\)) into algebro-geometric language.}
