include tilman's remarks

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -9,7 +9,7 @@ Remarkably, these unstable contexts also admit algebro-geometric interpretations
 \begin{description}
 \item[{\Cref{UnstableContextsSection}}] For \(F = E = \HFtwo\), we compute the full unstable dual Steenrod algebra \(\HFtwo_* \OS{\HFtwo}{*}\) by means of iterated bar spectral sequences.  We then pass to the additive unstable cooperations, where we show by hand that this presents the endomorphism scheme \(\InternalHom{FormalGroups}(\G_a, \G_a)\).  Finally, we pass to the stable additive cooperations, and we check that our results here are compatible with the isomorphism \[\Spec \HFtwo_* \HFtwo \cong \InternalAut{\G_a}\] presented in \Cref{SteenrodAlgIdentifiedWithAutGa}.
 \item[{\Cref{COableCoopnsII}}] We next consider the case where \(E = MU\) and where \(F\) is any complex-orientable theory.  We begin with the case \(F = \HFp\), where we can again approach the problem using iterated bar spectral sequences.  The resulting computation is sufficiently nice that we can use this special case of \(F = \HFp\) to deduce the further case of \(F = H\Z_{(p)}\), then \(F = H\Z\), then \(F = MU\), and then finally \(F\) any complex-orientable theory.
-\item[{\Cref{LEFTCooperations}}] Having been able to vary \(F\) as widely as possible in the previous case, we then turn to trying to vary \(E\).  This is considerably harder, since the infinite loopspaces \(\OS{E}{*}\) associated to \(E\) are extremely complicated and vary wildly under even ``small'' changes in \(E\).  However, in the special case of \(F = \HFp\), we have an incredibly powerful trick available to us: Dieudonn\'e theory, discussed in \Cref{SectionDieudonneModules}, gives an equivalence of categories \[D_*\co \CatOf{GradedHopfAlgs}^{> 0, \fin}_{\F_p/} \to \CatOf{GradedDMods},\] and applying this in the composite
+\item[{\Cref{LEFTCooperations}}] Having been able to vary \(F\) as widely as possible in the previous case, we then turn to trying to vary \(E\).  This is considerably harder, since the infinite loopspaces \(\OS{E}{*}\) associated to \(E\) are extremely complicated and vary wildly under even ``small'' changes in \(E\).  However, in the special case of \(F = \HFp\), we have an incredibly powerful trick available to us: Dieudonn\'e theory, discussed in \Cref{SectionDieudonneModules}, gives a logarithmic equivalence of categories \[D_*\co \CatOf{GradedHopfAlgs}^{> 0, \fin}_{\F_p/} \to \CatOf{GradedDMods},\] and applying this in the composite
 \begin{align*}
 \CatOf{Spectra} & \xrightarrow{\Loops^\infty} \CatOf{Loopspaces} \\
 & \xrightarrow{\HFp_*} \CatOf{GradedHopfAlgs}^{>0, \fin}_{\F_p/} \\
@@ -441,7 +441,7 @@ We can also directly calculate \[\<x\> \circ \<y\> = [x y] - \eps(x) \eps(y) [0]
 There is an isomorphism \(Q^* R[S] \cong R \otimes S\).
 \end{corollary}
 \begin{proof}[Construction]
-The inverse to the map \(x \mapsto \<x\>\) is given by
+The inverse to the map \(x \mapsto \<[x]\>\) is given by
 \begin{align*}
 c\co Q^* R[S] & \to R \otimes S, \\
 \sum_j r_j ([s_j] - [0]) & \mapsto \sum_j r_j \otimes s_j. \qedhere
@@ -463,7 +463,7 @@ Specializing to \(R = \Z\) and varying \(S\), the map \(c\) looks as though it m
 \end{align*}
 
 \begin{lemma}\label{HopfRingsAndRingsAdjunction}
-The functor \(i\co \CatOf{Rings} \to \CatOf{HopfRings}\) defined by \[i(R) = \Z[R] / (\ker \eps)^{\ast 2}\] participates in an adjunction
+The functor \(i\co \CatOf{Rings} \to \CatOf{HopfRings}\) defined by \[i(R) = \Z[R] / (\ker \eps)^{\ast 2}\] participates in an adjunction\footnote{Incidentally, the primitives functor admits a left-adjoint.}
 \begin{center}
 \begin{tikzcd}
 \CatOf{HopfRings} \arrow[shift left=0.2\baselineskip, "Q^*"]{r} & \CatOf{Rings} \arrow[shift left=0.2\baselineskip, "i"]{l}.
