jury-rig a fix for weird spacing at the top of diagram in 4.4.2

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -645,7 +645,7 @@ The \index{Kahler differentials@K\"ahler differentials!cohomologically invariant
 
 \begin{example}[{\cite[Lemma 5.1.2]{Katz}}]
 Consider the case that \(A\) is torsion-free, and set \(K = A \otimes \Q\) so that \(A \to K\) is an injection.  In this case the differentiation map \(x A\ps{x} \to A\ps{x}\) is an injection and integration of power series is possible in \(K\), so we can re-express first the definition of \(H^1_{dR}\) and second the conditions on our algebraic differentials in the following diagram of exact rows:
-\begin{center}
+\begin{center}\vspace{-0.8\baselineskip}
 \begin{tikzcd}[column sep=0.5em, row sep=0.5em]
 0 \arrow{r} & \left\{\begin{array}{c}\text{integrals} \\ \text{with \(A\)} \\ \text{coeff\textsuperscript{s}}\end{array}\right\} \arrow{r} \arrow[equal]{d} & \left\{\begin{array}{c}\text{all formal integrals} \\ \text{of differentials} \\ \text{defined over \(A\)}\end{array}\right\} \arrow{r} \arrow[equal]{d} & \left\{\begin{array}{c}\text{missing} \\ \text{integrals}\end{array}\right\} \arrow{r} \arrow[equal]{d} & 0 \\
 0 \arrow{r} & x A\ps{x} \arrow{r} & \{f \in x K\ps{x} \mid \mathrm{d}f \in A\ps{x}\dx\} \arrow{r}{d} & H^1_{dR}(\G/A) \arrow{r} & 0 \\
