--- a/cooperations.tex
+++ b/cooperations.tex
@@ -75,7 +75,7 @@ We would first like to recognize the cosimplicial abelian group \(\pi_0 \sheaf{U
 A ring spectrum \(E\) is said to satisfy the \index{flatness hypothesis@flatness hypothesis, \FH!unstable@unstable, \UFH}\textbf{U}nstable \textbf{F}reeness \textbf{H}ypothesis, or \UFH, if \(E_* \OS{E}{k}\) is a free and even \(E_*\)--module for every value of \(k\).\footnote{This helps us understand the following analogous zigzag: \[\pi_0 E(X) \xrightarrow{\eta_R} \pi_0 E(E(X)) \xleftarrow{\mu \circ 1} \pi_0 E(E(E(X))) \xleftarrow{\mathrm{compose}} \pi_m E(E(S^0)) \times \pi_0 E(X).\]}
 \end{definition}
 
-Under this condition, we again turn to studying the structure of \(\sheaf{UD}_E(S^0)\).  If we had a Segal condition, we would expect the structure present to be determined by \(\pi_0 \sheaf{UD}_E(S^0)[j]\) for \(j \le 2\).  The data at \(j = 0\) is largely redundant: \[\pi_0 E(S^0) = \pi_0 \OS{E}{0} = E_0\] computes the coefficient ring of \(E\).  The data at \(j = 1\) consists of the homology groups of the the infinite loopspace associated to \(E\): \[\pi_0 E(E(S^0)) = E_0 \OS{E}{0}.\]  There are three pieces of structure present here: the augmentation map \[E_0 \OS{E}{0} \to E_0(E) \to E_0\] and the left- and right-unit maps \(E_0 \to E_0 \OS{E}{0}\).  The assumption {\UFH} gives us a foothold on the case \(j = 2\): a choice of basis for \(E_0 \OS{E}{0}\) gives an unstable isomorphism \(E(E(S^0)) \simeq \prod_\ell \OS{E}{0}\), so that \(\pi_0 \sheaf{UD}_E(S^0)[2]\) splits as a tensor product of terms of the form \(E_0 \OS{E}{0}\).  Here, we find a lot of structure: the addition of cohomology classes is represented by a map \[\OS E 0 \times \OS E 0 \to \OS E 0,\] which on \(E\)--homology induces a map \[\ast\co E_0 \OS{E}{0} \otimes_{E_0} E_0 \OS{E}{0} \to E_0 \OS{E}{0};\] the multiplication of cohomology classes similarly induces a map \[\circ\co E_0 \OS{E}{0} \otimes E_0 \OS{E}{0} \to E_0 \OS{E}{0};\] these are compatible with the images of unit classes \(0, 1 \in \pi_0 E\) under the left- and right-units specified above; there is an additive inverse map \[\chi\co E_0 \OS{E}{0} \to E_0 \OS{E}{0}\] compatible with the \(\ast\)--product and giving a skew-commutativity formula \[a \circ b = \chi(b \circ a);\] there is a diagonal map \[\Delta\co E_0 \OS{E}{0} \to E_0 \OS{E}{0} \otimes_{E_0} E_0 \OS{E}{0}\] induced by the diagonal map of the space $\OS{E}{0}$; the maps \(\chi\), \(\ast\), and \(\Delta\) imbue \(E_0 \OS{E}{0}\) with a Hopf algebra structure; and there is a distributivity condition pictured in \Cref{DistributivityDiagram} intertwining \(\ast\), \(\circ\), and \(\Delta\).\footnote{Analogous structure also appears for aperiodic ring spectra \(E\) satisfying a graded version of {\UFH}, and in that case tracking through the extra grading indices is actually helpful for deciphering what these maps ``feel'' like.}
+Under this condition, we again turn to studying the structure of \(\sheaf{UD}_E(S^0)\).  If we had a Segal condition, we would expect the structure present to be determined by \(\pi_0 \sheaf{UD}_E(S^0)[j]\) for \(j \le 2\).  The data at \(j = 0\) is largely redundant: \[\pi_0 E(S^0) = \pi_0 \OS{E}{0} = E_0\] computes the coefficient ring of \(E\).  The data at \(j = 1\) consists of the homology groups of the the infinite loopspace associated to \(E\): \[\pi_0 E(E(S^0)) = E_0 \OS{E}{0}.\]  There are three pieces of structure present here: the augmentation map \[\eps\co E_0 \OS{E}{0} \to E_0(E) \to E_0\] and the left- and right-unit maps \(E_0 \to E_0 \OS{E}{0}\).  The assumption {\UFH} gives us a foothold on the case \(j = 2\): a choice of basis for \(E_0 \OS{E}{0}\) gives an unstable isomorphism \(E(E(S^0)) \simeq \prod_\ell \OS{E}{0}\), so that \(\pi_0 \sheaf{UD}_E(S^0)[2]\) splits as a tensor product of terms of the form \(E_0 \OS{E}{0}\).  Here, we find a lot of structure: the addition of cohomology classes is represented by a map \[\OS E 0 \times \OS E 0 \to \OS E 0,\] which on \(E\)--homology induces a map \[\ast\co E_0 \OS{E}{0} \otimes_{E_0} E_0 \OS{E}{0} \to E_0 \OS{E}{0};\] the multiplication of cohomology classes similarly induces a map \[\circ\co E_0 \OS{E}{0} \otimes E_0 \OS{E}{0} \to E_0 \OS{E}{0};\] these are compatible with the images of unit classes \(0, 1 \in \pi_0 E\) under the left- and right-units specified above; there is an additive inverse map \[\chi\co E_0 \OS{E}{0} \to E_0 \OS{E}{0}\] compatible with the \(\ast\)--product and giving a skew-commutativity formula \[a \circ b = \chi(b \circ a);\] there is a diagonal map \[\Delta\co E_0 \OS{E}{0} \to E_0 \OS{E}{0} \otimes_{E_0} E_0 \OS{E}{0}\] induced by the diagonal map of the space $\OS{E}{0}$; the maps \(\chi\), \(\ast\), and \(\Delta\) imbue \(E_0 \OS{E}{0}\) with a Hopf algebra structure; and there is a distributivity condition pictured in \Cref{DistributivityDiagram} intertwining \(\ast\), \(\circ\), and \(\Delta\).\footnote{Analogous structure also appears for aperiodic ring spectra \(E\) satisfying a graded version of {\UFH}, and in that case tracking through the extra grading indices is actually helpful for deciphering what these maps ``feel'' like.}
 
 \begin{figure}
 \begin{center}
@@ -289,7 +289,8 @@ Let \(R\) and \(S\) be graded rings.  The \index{Hopf ring!ring--ring}\textit{Ho
 R[S] \otimes_R R[S] & \xrightarrow{\ast} R[S] & [s] \ast [s'] & = [s + s'], \\
 R[S] \otimes_R R[S] & \xrightarrow{\circ} R[S] & [s] \circ [s'] & = [s \cdot s'], \\
 R[S] & \xrightarrow{\chi} R[S] & \chi [s] & = [-s], \\
-R[S] & \xrightarrow{\Delta} R[S] \otimes_R R[S] & \Delta [s] & = [s] \otimes [s].
+R[S] & \xrightarrow{\Delta} R[S] \otimes_R R[S] & \Delta [s] & = [s] \otimes [s], \\
+R[S] & \xrightarrow{\eps} R & \eps[s] & = 1.
 \end{align*}
 \end{definition}
 
