--- a/cooperations.tex
+++ b/cooperations.tex
@@ -425,7 +425,7 @@ Towards the second, we have already described an interesting bifunctorial embedd
 \begin{lemma}\label{ArithmeticInQAst}
 For \(H\) a Hopf ring and \(x \in H\), write \(\<x\> = x - \eps(x) \cdot [0]\) for the corresponding element of \(\ker \eps\).  In the \(\ast\)--indecomposable quotient, there are the formulas
 \begin{align*}
-\<x\> + \<y\> & = \<x \ast y\>, &
+\<x\>\eps(y) + \eps(x)\<y\> & = \<x \ast y\>, &
 \<x\> \circ \<y\> & = \<x \circ y\>.
 \end{align*}
 \end{lemma}
@@ -433,7 +433,7 @@ For \(H\) a Hopf ring and \(x \in H\), write \(\<x\> = x - \eps(x) \cdot [0]\) f
 Modulo \(\ast\)--decomposables, we can write
 \begin{align*}
 0 \equiv \<x\> \ast \<y\> & = x \ast y - x \eps(y) - \eps(x) y + \eps(x) \eps(y) [0] \\
-& = \<x \ast y\> - \<x\> - \<y\>.
+& = \<x \ast y\> - \<x\>\eps(y) - \eps(x)\<y\>.
 \end{align*}
 We can also directly calculate \[\<x\> \circ \<y\> = x \circ y - \eps(x) \eps(y) [0] - \eps(x) \eps(y) [0] + \eps(x) \eps(y) [0] = \<x \circ y\>. \qedhere\]
 \end{proof}
