--- a/cooperations.tex
+++ b/cooperations.tex
@@ -916,8 +916,7 @@ Our goal in this Lecture is to put Dieudonn\'e modules to work for us in algebra
 To meet algebraic topology in its natural setting, it will be useful to also have a version of Dieudonn\'e theory that is well-adapted to working with formal groups whose coordinate ring forms a \emph{graded} Hopf algebra.  This falls out of an extended study of the covariant Dieudonn\'e module: it can be shown that the functor $D_*$ is representable by the \textit{$p$--typical Witt formal group} $\widehat{\mathbb W}_p$,\footnote{An extremely pleasant perspective on the construction of the Witt scheme is presented by Lazard~\cite[Chapter III]{LazardCFGs}.}\footnote{A coordinate \(x\) on \(\CP^\infty_E\) induces a sequence of isomorphisms
 \begin{align*}
 \CatOf{FormalGroups}(BU_E, \G) & \cong \CatOf{FormalSchemes}(\CP^\infty_E, \G) \\
-& \stackrel{x}{\cong} \CatOf{FormalSchemes}(\A^1, \G) \\
-& = C\G,
+& \stackrel{x}{\cong} \CatOf{FormalSchemes}(\A^1, \G) = C\G,
 \end{align*}
 which presents \(E^* BU\) as the Witt Hopf algebra.  However, this isomorphism is not especially interesting~\cite[Remark 18.1]{StricklandFPFP}: for one, it is \emph{highly} dependent upon the choice of coordinate, but the far right-hand object has no dependence on \(\CP^\infty_E\), and so the operations we have been studying---formal group auto- and endomorphisms of \(\CP^\infty_E\), mainly---do not act, and this isomorphism cannot be equivariant in any useful sense.} i.e.,
 \begin{center}
@@ -926,7 +925,6 @@ C_* \G \arrow[equal]{r} & \CatOf{FormalSchemes}(\mathbb A^1, \G) \arrow[equal]{r
 D_* \G \arrow{u} \arrow[equal]{r} & \CatOf{FormalSchemes}(\mathbb A^1, \G)^{\ptyp} \arrow{u} \arrow[equal]{r} & \CatOf{FormalGroups}(\widehat{\mathbb W}_p, \G) \arrow{u} .
 \end{tikzcd}
 \end{center}
-
 The Witt formal scheme has the additional miraculous property that it is dualizable: there is a coWitt formal scheme $\widehat{C\mathbb W}_p$ with
 \begin{align*}
 \CatOf{FormalGroups}(\widehat{\mathbb W}_p, \G) & \cong \CatOf{FormalGroups}(\G, \widehat{C\mathbb W}_p) \\
