change phrasing to get a more noticeable paragraph break

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -1199,7 +1199,7 @@ If \(\mathbb G\) is a connected \(p\)--divisible group of height \(d\) and of di
 \end{lemma}
 
 \begin{remark}
-In the case where \(\mathbb G = \Gamma\) is the original height \(d\) formal group of dimension \(1\), this computes \(H^*(\Gamma; \G_a)\) to be a power series algebra on \((d-1)\) generators.  This is precisely the result we recorded by hand in \Cref{CalculationOfLTTangentSpace}.
+In the case where \(\mathbb G = \Gamma\) is the original height \(d\) formal group of dimension \(1\), this computes \(H^*(\Gamma; \G_a)\) to be a power series algebra on \((d-1)\) generators.  This is precisely what we found by hand in \Cref{CalculationOfLTTangentSpace}.
 \end{remark}
 
 \noindent Returning to the task at hand, we assume inductively that \((\OS{H(S^1[p^\infty])}{q-1})_K\) is a connected \(p\)--divisible group of height \(\binom{d}{q-1}\) and dimension \(\binom{d-1}{q-1}\).  Since the input to the bar spectral sequence is computed by formal group cohomology (\cite{LazarevDeformations}, \cite[Example 2.3.5]{HopkinsLurie}, Proof of \Cref{Symmetric2CocycleLemma}), it follows that the instance computing \(K^* \OS{H(S^1[p^\infty])}{q}\) has as its \(E_2\)--page an even-concentrated power series algebra of dimension \[\binom{d}{q-1} - \binom{d-1}{q-1} = \binom{d-1}{q}.\]  The spectral sequence therefore collapses at this page, so that \((\OS{H(S^1[p^\infty])}{q})_K\) is a formal variety of the dimension claimed.
