offset the quoted proof in 4.6.8.iii

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -1219,6 +1219,7 @@ By very carefully studying the bar spectral sequence, one can learn that \(\thet
 
 \begin{proof}[Proof of Part 3, mostly omitted]
 This proof is quite complicated, but it is, in spirit, a generalization of the observation at \(q = 1\) that the role of the odd-degree classes in the bar spectral sequence is to pair up with those classes in the image of the \([p^j]\)--map.  In fact, their main assertion is:
+\begin{siderules}
 \begin{quote}
 We give notation for the following rings:
 \begin{align*}
@@ -1228,7 +1229,8 @@ R & = K_0 \OS{H(S^1[p^\infty])}{q}.
 \end{align*}
 Let \(x' \in E_2^{1, 0}\) be an element, and let \(y' \in \mathfrak m_R\) satisfy \[y' = \psi(x') \otimes v \in \Ext^2_A \otimes_k \pi_2 K \cong \mathfrak m_R / \mathfrak m_R^2.\]  Suppose that the Hopf algebra homomorphism \([p^j]\co R \to R\) carries \(y'\) to an element \(y \in \mathfrak m_R^s\), and let \(x \in E_2^{2s, 2s-2}\) denote the image of \(y\) under the composite \[\mathfrak m_R^s / \mathfrak m_R^{s+1} \cong \Ext_A^{2s} \otimes_k \pi_{2s} K \to \Ext_{A'}^{2s} \otimes_k \pi_{2s} K = E_2^{2s, 2s} \xrightarrow{-v^{-1}} E_2^{2s, 2s-2}.\]  Then \(x\) and \(x'\) survive to the \((2s - 1)\){\th} page of the bar spectral sequence, and there we have \[d_{2s-1} x' = x.\]
 \end{quote}
-From here, it is a matter of \emph{very} carefully pairing elements up (cf.\ \cite[pg.\ 60]{HopkinsLurie}).
+\end{siderules}
+From here, it is a matter of \emph{carefully} pairing elements (cf.\ \cite[pg.\ 60]{HopkinsLurie}).
 \end{proof}
 
 \begin{remark}
