--- a/preamble.tex
+++ b/preamble.tex
@@ -475,3 +475,13 @@
 }
 \makeatother
 
+
+\usepackage{mdframed}
+\newmdenv[
+  topline=false,
+  bottomline=false,
+  skipabove=\topsep,
+  skipbelow=\topsep
+]{siderules}
+
+
